fix audio folder error, set canvas aligned to center, add platforms to game

--- a/games/collecting_stars/css/game.css
+++ b/games/collecting_stars/css/game.css
@@ -2,12 +2,13 @@ body {
     margin: 0;
     overflow: hidden;
     background-color: black;
+    text-align: center;
 }
-		
+
 canvas {
     height: 100%;
 }
-		
+
 #phaser-app {
     margin: 0 auto;
 }
